fixed obstacle overlap issue

--- a/css/obstacles.css
+++ b/css/obstacles.css
@@ -1,6 +1,6 @@
 .car-obstacle {
     position: absolute;
-    z-index: 2;
+    z-index: 3;
 }
 
 .car-img {
@@ -17,6 +17,7 @@
     transform: translate(-50%, -50%);
     background-color: rgba(255, 0, 0, 0.3);
     border: 1px solid red;
+    opacity: 0;
     z-index: 3;
 }
 
